--- a/index.html
+++ b/index.html
@@ -897,10 +897,10 @@
                     <a href="#">Quem Somos</a>
                     <!-- Submenu para Quem Somos -->
                     <ul class="submenu">
-                        <li><a href="index.html">Sobre Nós</a></li>
+                        
                         <li><a href="historia.html">Historia</a></li>
                         <li><a href="#">Pilares e Valores</a></li>
-                        <li><a href="nossaestrut.html">Nossa Estrutura</a></li>
+                        <li><a href="estrutura.html">Nossa Estrutura</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
@@ -1081,7 +1081,7 @@
             <a href="index.html" class="custom-text">Sobre Nós</a>
             <a href="historia.html" class="custom-text">Historia</a>
             <a href="#" class="custom-text">Pilares e Valores</a>
-            <a href="nossaestrut.html" class="custom-text">Nossa Estrutura</a>
+            <a href="estrutura.html" class="custom-text">Nossa Estrutura</a>
         </div>
 
         <!-- Column 2 -->
