--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@
 
         <!-- Column 3 -->
         <div class="column">
-            <a href="contato.html" class="custom-text">Contato</a>
+            <a href=".html" class="custom-text">Contato</a>
             
         </div>
     </div>
